<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_default_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:scrollbarStyle="insideInset"
        android:id="@+id/feedback_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:gravity="start"
        android:hint="@string/info_feedback_input_hint"
        android:paddingLeft="@dimen/activity_default_padding"
        android:paddingRight="@dimen/activity_default_padding"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/feedback_send"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/send"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16" />

    <TextView
        android:id="@+id/feedback_tip_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:text="@string/info_will_speed_few_cent"
        android:textSize="@dimen/text_middle_s"
        app:layout_constraintBottom_toBottomOf="@+id/feedback_send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/feedback_send"
        app:layout_constraintTop_toTopOf="@+id/feedback_send" />

    <TextView
        android:id="@+id/feedback_tip_other_where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="bottom|start"
        android:text="@string/info_contact_me_other_where"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</android.support.constraint.ConstraintLayout>